--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <version>3.0.0-M5</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
