--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
             <version>3.0.0-M5</version>
             <type>maven-plugin</type>
         </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.12.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
