--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
         <junit.version>5.7.0</junit.version>
     </properties>
 
-    <name>Lecture Java2 - 2021 - JPA</name>
-    <description>JAVA Project 2 - Locster</description>
+    <name>Locster</name>
+    <description>JAVA 2 Projekt</description>
     <url>https://github.com/fh-erfurt/Java1-Locster</url>
 
     <inceptionYear>2021</inceptionYear>
@@ -33,8 +33,8 @@
         </developer>
         <developer>
             <id>2</id>
-            <name>Molham Al Kohdari</name>
-            <email>molham.al.kohdari@fh-erfurt.de</email>
+            <name>Molham Al-Khodari</name>
+            <email>molham.al.khodari@fh-erfurt.de</email>
             <roles>
                 <role>Developer</role>
             </roles>
@@ -105,6 +105,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.0.0-alpha</version>
         </dependency>
 
         <dependency>
