--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/locster
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 # create-drop when overwriting database and testing
 # validate or update in production
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
