--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
             <version>4.4.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
     </dependencies>
 
