--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
 # to prevent exception when booting
 spring.main.allow-bean-definition-overriding=true
+
+server.error.include-message=always
